tests/__snapshots__/api-toBeInstantiableWith-type-alias-stderr.snap.txt
Error: Type is instantiable without type arguments.

  10 |   test("is instantiable without type arguments", () => {
  11 |     expect<Single>().type.toBeInstantiableWith();
  12 |     expect<Single>().type.not.toBeInstantiableWith(); // fail
     |                               ~~~~~~~~~~~~~~~~~~~~
  13 |   });
  14 | 
  15 |   test("is instantiable with the given type argument", () => {

       at ./__typetests__/type-alias.tst.ts:12:31 ❭ when source is a type alias ❭ is instantiable without type arguments

Error: Type is instantiable with the given type argument.

  15 |   test("is instantiable with the given type argument", () => {
  16 |     expect<Double<_, _>>().type.toBeInstantiableWith<[string, number]>();
  17 |     expect<Double<_, _>>().type.not.toBeInstantiableWith<[string, number]>(); // fail
     |                                     ~~~~~~~~~~~~~~~~~~~~
  18 | 
  19 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number]>();
  20 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number]>(); // fail

       at ./__typetests__/type-alias.tst.ts:17:37 ❭ when source is a type alias ❭ is instantiable with the given type argument

Error: Type is instantiable with the given type argument.

  18 | 
  19 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number]>();
  20 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number]>(); // fail
     |                                  ~~~~~~~~~~~~~~~~~~~~
  21 | 
  22 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number, boolean]>();
  23 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number, boolean]>(); // fail

       at ./__typetests__/type-alias.tst.ts:20:34 ❭ when source is a type alias ❭ is instantiable with the given type argument

Error: Type is instantiable with the given type argument.

  21 | 
  22 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number, boolean]>();
  23 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number, boolean]>(); // fail
     |                                  ~~~~~~~~~~~~~~~~~~~~
  24 |   });
  25 | 
  26 |   test("is instantiable with the given type arguments", () => {

       at ./__typetests__/type-alias.tst.ts:23:34 ❭ when source is a type alias ❭ is instantiable with the given type argument

Error: Type is instantiable with the given type argument.

  26 |   test("is instantiable with the given type arguments", () => {
  27 |     expect<Double<_, _>>().type.toBeInstantiableWith<[string, number]>();
  28 |     expect<Double<_, _>>().type.not.toBeInstantiableWith<[string, number]>(); // fail
     |                                     ~~~~~~~~~~~~~~~~~~~~
  29 | 
  30 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number]>();
  31 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number]>(); // fail

       at ./__typetests__/type-alias.tst.ts:28:37 ❭ when source is a type alias ❭ is instantiable with the given type arguments

Error: Type is instantiable with the given type argument.

  29 | 
  30 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number]>();
  31 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number]>(); // fail
     |                                  ~~~~~~~~~~~~~~~~~~~~
  32 | 
  33 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number, boolean]>();
  34 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number, boolean]>(); // fail

       at ./__typetests__/type-alias.tst.ts:31:34 ❭ when source is a type alias ❭ is instantiable with the given type arguments

Error: Type is instantiable with the given type argument.

  32 | 
  33 |     expect<Triple<_>>().type.toBeInstantiableWith<[string, number, boolean]>();
  34 |     expect<Triple<_>>().type.not.toBeInstantiableWith<[string, number, boolean]>(); // fail
     |                                  ~~~~~~~~~~~~~~~~~~~~
  35 |   });
  36 | 
  37 |   test.todo("can NOT be instantiated", () => {

       at ./__typetests__/type-alias.tst.ts:34:34 ❭ when source is a type alias ❭ is instantiable with the given type arguments

